# DroneSwarm

./: .gitattributes  .gitmodules  CMakeLists.txt  Effectiveness.txt  Findexternprolite.cmake  README.md  TODO.txt  config.json
DroneControl/: CMakeLists.txt  main.cpp
DroneControl/LIB/DroneControllerLib/: CMakeLists.txt  DroneController.cpp  DroneController.hpp
DroneControl/Test/: CMakeLists.txt
DroneController/: CMakeLists.txt  DroneControllerMain.cpp
DroneController/LIB/DroneControllerLib/: CMakeLists.txt  DroneController.cpp  DroneController.hpp  DroneControllerMessagesToString.cpp  DroneControllerMessagesToString.hpp  DroneControllerState.cpp  DroneControllerState.hpp  DroneControllerStateChanges.cpp  DroneControllerStateChanges.hpp
DroneController/Test/: CMakeLists.txt  DroneControllerCheckMsgToSend.cpp  DroneControllerMainTest.cpp  DroneControllerMessagesToString.cpp  DroneControllerStateChangesTest.cpp  DroneControllerTest.cpp  DroneStateTest.cpp
DroneManager/: CMakeLists.txt  DroneManagerMain.cpp
DroneManager/LIB/DroneManagerLib/: CMakeLists.txt  DroneController.cpp  DroneController.hpp  DroneControllerCheckMsgToSend.cpp  DroneControllerCheckMsgToSend.hpp  DroneControllerState.cpp  DroneControllerState.hpp  DroneControllerStateChanges.cpp  DroneControllerStateChanges.hpp  DroneManager.cpp  DroneManager.hpp
DroneManager/Test/: CMakeLists.txt  DroneControllerCheckMsgToSend.cpp  DroneControllerMessagesToString.cpp  DroneControllerStateChangesTest.cpp  DroneControllerTest.cpp  DroneManagerTest.cpp  DroneStateTest.cpp
DroneSimulator/: CMakeLists.txt  DroneSimulatorMain.cpp
DroneSimulator/LIB/: CMakeLists.txt  DroneSimulatorController.hpp
DroneSimulator/LIB/DroneSimulatorLib/: CMakeLists.txt  DroneSimulator.cpp  DroneSimulator.hpp  DroneSimulatorConsts.hpp  DroneSimulatorController.cpp
DroneSimulator/LIB/DroneSimulatorLib/State/: DroneConfiguration.cpp  DroneConfiguration.hpp  DroneLocation.cpp  DroneLocation.hpp  DroneSimulatorIdleState.cpp  DroneSimulatorIdleState.hpp  DroneSimulatorPretest.hpp  DroneSimulatorPretestState.cpp  DroneSimulatorPretestState.hpp  DroneSimulatorSDKState.cpp  DroneSimulatorSDKState.hpp  DroneSimulatorState.hpp  DroneSimulatorStateChanges.cpp  DroneSimulatorStateChanges.hpp  DroneSimulatorStateImpl.cpp  DroneSimulatorStateImpl.hpp
DroneSimulator/Test/: CMakeLists.txt  DroneConfigurationTest.cpp  DroneLocationTest.cpp  DroneSimulatorIdleStateTest.cpp  DroneSimulatorStateChangesTest.cpp  DroneSimulatorStateImplTest.cpp  DroneSimulatorTest.cpp  DroneSimulatorTestMain.cpp  LocationUpdaterTest.cpp
GroundStation/LIB/GroundStationLib/: CMakeLists.txt  GroundStationController.cpp  GroundStationController.hpp  PretestController.cpp  PretestController.hpp
GroundStation/Test/: CMakeLists.txt  GroundStationControllerTest.cpp
MockGroundStation/: CMakeLists.txt  main.cpp
Monitor/: App.xaml  App.xaml.cs  BaseMsg.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  StringMsg.cs
Monitor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Playground/: CMakeLists.txt  main.cpp
Referee/LIB/RefereeLib/: CMakeLists.txt  GameManager.cpp  GameManager.hpp  Graph.cpp  Graph.hpp  PretestController.cpp  PretestController.hpp  RefereeController.cpp  RefereeController.hpp
Referee/Test/: CMakeLists.txt  RefereeControllerTest.cpp  RefereeGraphTest.cpp  RefereeMainTest.cpp
Shared/: CMakeLists.txt
Shared/ACQLIB/ACQLib/: ACQ.cpp  ACQ.hpp  ACQEndpoint.cpp  ACQEndpoint.hpp  CMakeLists.txt
Shared/DroneMessagesLIB/DroneMessagesLib/: CMakeLists.txt  DetectionDirection.hpp  DroneStatusMessage.cpp  DroneStatusMessage.hpp  Message.cpp  Message.hpp  MessageFactory.cpp  MessageFactory.hpp  Message_t.hpp  NoParamMessage.cpp  NoParamMessage.hpp  OneParamMessage.cpp  OneParamMessage.hpp
Shared/JSONLIB/JSONLib/: CMakeLists.txt  Deserialize.cpp  Deserialize.hpp  Serialize.cpp  Serialize.hpp
Shared/LoggerLIB/LoggerLib/: CMakeLists.txt  Logger.cpp  Logger.hpp
Shared/MonitorLoggerLIB/MonitorLoggerLib/: CMakeLists.txt  MonitorLogger.cpp  MonitorLogger.hpp
Shared/MsgLIB/MsgLib/: BaseMsg.cpp  BaseMsg.hpp  CMakeLists.txt  EncryptedMsg.cpp  EncryptedMsg.hpp  FinishMsg.cpp  FinishMsg.hpp  FinishRsp.cpp  FinishRsp.hpp  FlightPathMsg.cpp  FlightPathMsg.hpp  FlightPathRsp.cpp  FlightPathRsp.hpp  HitTargetMsg.cpp  HitTargetMsg.hpp  HitTargetRsp.cpp  HitTargetRsp.hpp  MsgTypes.cpp  MsgTypes.hpp  PingMsg.cpp  PingMsg.hpp  PingRsp.cpp  PingRsp.hpp  Point.cpp  Point.hpp  ReadyMsg.cpp  ReadyMsg.hpp  ReadyRsp.cpp  ReadyRsp.hpp  ReadyRspRsp.cpp  ReadyRspRsp.hpp  SerializeDeserialize.hpp  StartGameRsp.cpp  StartGameRsp.hpp  StringMsg.cpp  StringMsg.hpp  Target.cpp  Target.hpp  TargetMsg.cpp  TargetMsg.hpp  (+6 more)
Shared/ProtoLIB/ProtoLib/: BaseMsg.proto  CMakeLists.txt  EncryptedMsg.proto  FinishMsg.proto  FinishRsp.proto  FlightPathMsg.proto  FlightPathRsp.proto  HitTargetMsg.proto  HitTargetRsp.proto  PingMsg.proto  PingRsp.proto  Point.proto  ReadyMsg.proto  ReadyRsp.proto  ReadyRspRsp.proto  StartGameMsg.proto  StartGameRsp.proto  StringMsg.proto  Target.proto  TargetMsg.proto  TargetRsp.proto  ZConfigMsg.proto  ZConfigRsp.proto
Shared/RegistryLIB/RegistryLib/: CMakeLists.txt  Registry.cpp  Registry.hpp  Target.cpp  Target.hpp
Shared/TCPLIB/TCPLib/: BaseMsg.cpp  BaseMsg.hpp  CMakeLists.txt  EncryptHelpers.cpp  EncryptHelpers.hpp  Handler.cpp  Handler.hpp  TCPClient.cpp  TCPClient.hpp  TCPConnection.cpp  TCPConnection.hpp  TCPServer.cpp  TCPServer.hpp  TCPTools.cpp  TCPTools.hpp
Shared/UDPLIB/UDPLib/: CMakeLists.txt  Response.cpp  Response.hpp  UDPClient.cpp  UDPClient.hpp  UDPCommunicator.cpp  UDPCommunicator.hpp  UDPCommunicatorReliable.cpp  UDPCommunicatorReliable.hpp  UDPSender.cpp  UDPSender.hpp  UDPServer.cpp  UDPServer.hpp
Shared/UtilsLIB/UtilsLib/: CMakeLists.txt  Utils.cpp  Utils.hpp
Shared/XMLLIB/XMLLib/: CMakeLists.txt  Deserialize.cpp  Deserialize.hpp  Serialize.cpp  Serialize.hpp
StatusManager/Test/: CMakeLists.txt  StatusManagerMainTest.cpp
TCPClient/: CMakeLists.txt  main.cpp
UDPSender/: CMakeLists.txt  main.cpp
(+137 files in other folders)
